om/ompy/parser/test/programs/illformed/stray_close.om
} do {x}
====
0
1
1
